tdf#90736: PPTX import: Improved table border line style support

Map preset line dash values from ooxml to the smaller set of LO's
predefined table border line styles.  Map custom dashing scheme
to a simple dashed line style.

Change-Id: Ia81d94cb7e20b05f1c2cc0c20c8ad398c5613d6c