oox/source/drawingml/table/tablecell.cxx
@@ -32,6 +32,7 @@
 #include <com/sun/star/beans/XMultiPropertySet.hpp>
 #include <com/sun/star/table/XTable.hpp>
 #include <com/sun/star/table/XMergeableCellRange.hpp>
+#include <com/sun/star/table/BorderLineStyle.hpp>
 #include <com/sun/star/table/BorderLine2.hpp>
 #include <com/sun/star/drawing/LineStyle.hpp>
 #include <com/sun/star/drawing/TextVerticalAdjust.hpp>
@@ -72,7 +73,7 @@ void applyLineAttributes( const ::oox::core::XmlFilterBase& rFilterBase,
         sal_Int32 nPropId )
 {
     BorderLine2 aBorderLine;
-    if( rLineProperties.maLineFill.moFillType.differsFrom( XML_noFill ))
+    if ( rLineProperties.maLineFill.moFillType.differsFrom( XML_noFill ))
     {
         Color aColor = rLineProperties.maLineFill.getBestSolidColor();
         aBorderLine.Color = aColor.getColor( rFilterBase.getGraphicHelper() );
@@ -89,6 +90,45 @@ void applyLineAttributes( const ::oox::core::XmlFilterBase& rFilterBase,
         aBorderLine.InnerLineWidth = static_cast< sal_Int16 >( GetCoordinate( rLineProperties.moLineWidth.get( 0 ) ) / 4 );
         aBorderLine.LineWidth = static_cast< sal_Int16 >( GetCoordinate( rLineProperties.moLineWidth.get( 0 ) ) / 2 );
         aBorderLine.LineDistance = 0;
+    }
+
+    if ( rLineProperties.moPresetDash.has() )
+    {
+        switch ( rLineProperties.moPresetDash.get() )
+        {
+        case XML_dot:
+        case XML_sysDot:
+            aBorderLine.LineStyle = ::table::BorderLineStyle::DOTTED;
+            break;
+        case XML_dash:
+        case XML_lgDash:
+        case XML_sysDash:
+            aBorderLine.LineStyle = ::table::BorderLineStyle::DASHED;
+            break;
+        case XML_dashDot:
+        case XML_lgDashDot:
+        case XML_sysDashDot:
+            aBorderLine.LineStyle = ::table::BorderLineStyle::DASH_DOT;
+            break;
+        case XML_lgDashDotDot:
+        case XML_sysDashDotDot:
+            aBorderLine.LineStyle = ::table::BorderLineStyle::DASH_DOT_DOT;
+            break;
+        case XML_solid:
+            aBorderLine.LineStyle = ::table::BorderLineStyle::SOLID;
+            break;
+        default:
+            aBorderLine.LineStyle = ::table::BorderLineStyle::DASHED;
+            break;
+        }
+    }
+    else if ( !rLineProperties.maCustomDash.empty() )
+    {
+        aBorderLine.LineStyle = ::table::BorderLineStyle::DASHED;
+    }
+    else
+    {
+        aBorderLine.LineStyle = ::table::BorderLineStyle::NONE;
     }
 
     PropertySet aPropSet( rxPropSet );
